# autopad

./: CMakeLists.txt  Corrector.cpp  Corrector.h  Document.cpp  Document.h  MainWindow.cpp  MainWindow.h  README.md  Session.cpp  Session.h  main.cpp  resources.qrc
dictionaries/: ita.txt
icons/: Thumbs.db
